--- a/.github/workflows/trigger-transfer-docker-image.yaml
+++ b/.github/workflows/trigger-transfer-docker-image.yaml
@@ -26,9 +26,9 @@ jobs:
         MATRIX_JSON="["
         for IMAGE in $IMAGE_LIST; do
           SOURCE_REGISTRY="docker.io"
-          SOURCE_IMAGE="${IMAGE}"
+          SOURCE_IMAGE="$IMAGE"
           TARGET_REGISTRY="ttl.sh"  # Predict target registry
-          TARGET_IMAGE="$(echo ${IMAGE} | sed "s|${SOURCE_REGISTRY}/|${TARGET_REGISTRY}/|")
+          TARGET_IMAGE="$(echo "$IMAGE" | sed "s|$SOURCE_REGISTRY/|$TARGET_REGISTRY/|g")
           MATRIX_JSON="$MATRIX_JSON{\"source_image\":\"$SOURCE_IMAGE\",\"target_image\":\"$TARGET_IMAGE\"},"
         done
         MATRIX_JSON="${MATRIX_JSON%,}]" # Remove trailing comma and close array
