--- a/.github/workflows/trigger-transfer-docker-image.yaml
+++ b/.github/workflows/trigger-transfer-docker-image.yaml
@@ -40,7 +40,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        include: ${{ fromJson(env.matrix) }}  # Using environment variable for matrix
+        include: ${{ fromJson(needs.process-image-list.outputs.matrix) }}  # Use job output to populate matrix
 
     steps:
     - name: Debug Matrix
