--- a/.github/workflows/trigger-transfer-docker-image.yaml
+++ b/.github/workflows/trigger-transfer-docker-image.yaml
@@ -4,6 +4,7 @@ on:
   push:
     paths:
       - containers/** # Monitor changes to directory
+      - .github/workflows/**
 
 jobs:
   process-image-list:
