--- a/.github/workflows/trigger-transfer-docker-image.yaml
+++ b/.github/workflows/trigger-transfer-docker-image.yaml
@@ -24,13 +24,14 @@ jobs:
       run: |
         echo "Parsing images-list.json..."
         IMAGE_LIST=$(zarf tools yq -r '.components[].images[]' containers/zarf.yaml)
+        MATRIX_JSON="["
         for IMAGE in $IMAGE_LIST; do
-          echo "For the matrix step later we need to create the output via a here doc method"
-          echo "matrix<<DELIMITER" >> ${GITHUB_OUTPUT}
-          echo "{\"include\":[{\"source_image\":\"$SOURCE_IMAGE\"}]}" >> ${GITHUB_OUTPUT}
-          echo "DELIMITER" >> ${GITHUB_OUTPUT}
+          SOURCE_IMAGE="$IMAGE"
+          MATRIX_JSON="$MATRIX_JSON{\"source_image\":\"$SOURCE_IMAGE\"},"
         done
+        MATRIX_JSON="${MATRIX_JSON%,}]" # Remove trailing comma and close array
         echo "Matrix JSON: $MATRIX_JSON"
+        echo "matrix=$MATRIX_JSON" >> $GITHUB_OUTPUT
 
     - name: Debug Output
       run: |
@@ -52,4 +53,4 @@ jobs:
       uses: ./.github/workflows/transfer-docker-image.yaml
       with:
         source_image: ${{ matrix.source_image }}
-        target_image: ${{ matrix.target_image }}
+        target_image: ${{ matrix.source_image }}
