--- a/.github/workflows/trigger-transfer-docker-image.yaml
+++ b/.github/workflows/trigger-transfer-docker-image.yaml
@@ -10,7 +10,7 @@ jobs:
   process-image-list:
     runs-on: ubuntu-latest
     outputs:
-      image_list: ${{ steps.get-images.outputs.image_list }}
+      image_list: ${{ steps.parse-images.outputs.image_list }}
 
     steps:
     - name: Checkout Code
@@ -26,15 +26,15 @@ jobs:
       run: |
         echo "Parsing images-list.json..."
         IMAGE_LIST=$(zarf tools yq -r '.components[].images[]' containers/zarf.yaml)
-        echo "image_list=[${IMAGE_LIST//$'\n'/,}]" >> $GITHUB_ENV  # Set the list to GITHUB_ENV
-        echo "image_list: $image_list"
+        IMAGE_LIST_JSON=$(echo "[${IMAGE_LIST//$'\n'/,}]")
+        echo "image_list=$IMAGE_LIST_JSON" >> $GITHUB_ENV  # Set the list as an environment variable
 
   transfer-images:
     needs: process-image-list
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        source_image: ${{ fromJson(env.IMAGE_LIST) }}  # Using the environment variable
+        image: ${{ fromJson(needs.process-image-list.outputs.image_list) }}  # Reference the output of the read-docker-images job
 
     steps:
     - name: Debug Matrix
