--- a/.github/workflows/trigger-transfer-docker-image.yaml
+++ b/.github/workflows/trigger-transfer-docker-image.yaml
@@ -26,15 +26,14 @@ jobs:
       run: |
         echo "Parsing images-list.json..."
         IMAGE_LIST=$(zarf tools yq -r '.components[].images[]' containers/zarf.yaml)
-        IMAGE_LIST_JSON=$(echo "[${IMAGE_LIST//$'\n'/,}]")
-        echo "image_list=$IMAGE_LIST_JSON" >> $GITHUB_ENV  # Set the list as an environment variable
+        echo "IMAGE_LIST=${IMAGE_LIST//$'\n'/,}]" >> $GITHUB_ENV
 
   transfer-images:
     needs: process-image-list
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        image: ${{ fromJson(needs.process-image-list.outputs.image_list) }}  # Reference the output of the read-docker-images job
+        image_list: ${{ fromJson(needs.process-image-list.outputs.image_list) }}  # Reference the output of the read-docker-images job
 
     steps:
     - name: Debug Matrix
