--- a/.github/workflows/trigger-transfer-docker-image.yaml
+++ b/.github/workflows/trigger-transfer-docker-image.yaml
@@ -33,8 +33,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        image_list: ${{ fromJson(needs.process-image-list.outputs.image_list) }}  # Reference the output of the read-docker-images job
-
+        source_image: [ "docker.io/busybox:1.36.0", "docker.io/alpine:3.18.10" ]
+        
     steps:
     - name: Debug Matrix
       run: |
