--- a/.github/actions/transfer-docker-image/action.yaml
+++ b/.github/actions/transfer-docker-image/action.yaml
@@ -1,20 +1,16 @@
 name: Transfer Docker Image
 
-on:
-  workflow_call:
-    inputs:
-      source_image:
-        required: true
-        type: string
-      target_image:
-        required: true
-        type: string
+inputs:
+  source_image:
+    required: true
+    type: string
+  target_image:
+    required: true
+    type: string
 
-jobs:
-  transfer-docker-image:
-    runs-on: ubuntu-latest
-
-    steps:
+runs:
+  using: composite
+  steps:
     - name: Log in to Source Registry
       uses: docker/login-action@v2
       with:
