--- a/.github/actions/transfer-docker-image/action.yaml
+++ b/.github/actions/transfer-docker-image/action.yaml
@@ -1,6 +1,12 @@
 name: Transfer Docker Image
 
 inputs:
+  source_registry:
+    required: true
+    type: string
+  target_registry:
+    required: true
+    type: string
   source_image:
     required: true
     type: string
@@ -14,7 +20,7 @@ runs:
     - name: Log in to Source Registry
       uses: docker/login-action@v2
       with:
-        registry: ${{ inputs.source_image.split('/')[0] }}
+        registry: ${{ inputs.source_registry }}
         username: ${{ secrets.SOURCE_REGISTRY_USERNAME }}
         password: ${{ secrets.SOURCE_REGISTRY_PASSWORD }}
 
@@ -26,7 +32,7 @@ runs:
     - name: Log in to Target Registry
       uses: docker/login-action@v2
       with:
-        registry: ${{ inputs.target_image.split('/')[0] }}
+        registry: ${{ inputs.target_registry }}
         username: ${{ secrets.TARGET_REGISTRY_USERNAME }}
         password: ${{ secrets.TARGET_REGISTRY_PASSWORD }}
 
