--- a/.github/actions/transfer-docker-image/action.yaml
+++ b/.github/actions/transfer-docker-image/action.yaml
@@ -24,11 +24,6 @@ runs:
 #        username: ${{ secrets.SOURCE_REGISTRY_USERNAME }}
 #        password: ${{ secrets.SOURCE_REGISTRY_PASSWORD }}
 
-    - name: Pull Docker Image from Source
-      uses: docker/cli-action@v1
-      with:
-        run: docker pull ${{ inputs.source_image }}
-
     - name: Log in to Target Registry
       uses: docker/login-action@v2
       with:
@@ -40,6 +35,7 @@ runs:
       uses: docker/cli-action@v1
       with:
         run: |
+          docker pull ${{ inputs.source_image }}
           docker tag ${{ inputs.source_image }} ${{ inputs.target_image }}
           docker push ${{ inputs.target_image }}
 
