--- a/.github/actions/transfer-docker-image/action.yaml
+++ b/.github/actions/transfer-docker-image/action.yaml
@@ -17,17 +17,17 @@ inputs:
 runs:
   using: composite
   steps:
-    - name: Log in to Source Registry
-      uses: docker/login-action@v2
-      with:
-        registry: ${{ inputs.source_registry }}
+#    - name: Log in to Source Registry
+#      uses: docker/login-action@v2
+#      with:
+#        registry: ${{ inputs.source_registry }}
 #        username: ${{ secrets.SOURCE_REGISTRY_USERNAME }}
 #        password: ${{ secrets.SOURCE_REGISTRY_PASSWORD }}
 
-    - name: Log in to Target Registry
-      uses: docker/login-action@v2
-      with:
-        registry: ${{ inputs.target_registry }}
+#    - name: Log in to Target Registry
+#      uses: docker/login-action@v2
+#      with:
+#        registry: ${{ inputs.target_registry }}
 #        username: ${{ secrets.TARGET_REGISTRY_USERNAME }}
 #        password: ${{ secrets.TARGET_REGISTRY_PASSWORD }}
 
