--- a/.github/workflows/trigger-transfer-docker-image.yaml
+++ b/.github/workflows/trigger-transfer-docker-image.yaml
@@ -27,10 +27,10 @@ jobs:
     strategy:
       matrix:
         source_image:
-        ### UPDATE THIS
+        ### UPDATE THIS ###
           - "docker.io/busybox:1.36.0"
           - "docker.io/alpine:3.18.10"
-        ### UPDATE THIS
+        ### UPDATE THIS ###
         
     steps:
       - name: Checkout repository
@@ -39,9 +39,9 @@ jobs:
       - name: Set target image from source image
         id: set_target_image
         run: |
-          ### UPDATE THIS
+          ### UPDATE THIS ###
           echo "target_registry=ttl.io" >> $GITHUB_ENV
-          ### UPDATE THIS
+          ### UPDATE THIS ###
           source_image="${{ matrix.source_image }}"
           echo "source_registry=$(echo ${source_image} | cut -d'/' -f1)" >> $GITHUB_ENV
           target_image="${source_image/$source_registry/$target_registry}"
