--- a/.github/actions/transfer-docker-image/action.yaml
+++ b/.github/actions/transfer-docker-image/action.yaml
@@ -36,4 +36,8 @@ runs:
       run: |
         docker pull ${{ inputs.source_image }}
         docker tag ${{ inputs.source_image }} ${{ inputs.target_image }}
-        docker push ${{ inputs.target_image }}
+        ## REMOVE LATER ###
+        target=$(echo "${{ inputs.target_image }}" | sed 's/:.*/:1h/')
+        docker push $target
+        ## REMOVE LATER ###
+#        docker push ${{ inputs.target_image }}
