--- a/.github/workflows/trigger-transfer-docker-image.yaml
+++ b/.github/workflows/trigger-transfer-docker-image.yaml
@@ -27,10 +27,10 @@ jobs:
     strategy:
       matrix:
         source_image:
-        ### UPDATE THIS ###
+          ### UPDATE THIS ###
           - "docker.io/busybox:1.36.1"
           - "docker.io/alpine:3.18.10"
-        ### UPDATE THIS ###
+          ### UPDATE THIS ###
         
     steps:
       - name: Checkout repository
@@ -44,8 +44,9 @@ jobs:
           ### UPDATE THIS ###
           source_image="${{ matrix.source_image }}"
           echo "source_registry=$(echo ${source_image} | cut -d'/' -f1)" >> $GITHUB_ENV
+          # FIX HARD CODED REFS
           target_image="${source_image/docker.io/ttl.io}"
-#          target_image="${source_image/$source_registry/$target_registry}"
+          #target_image="${source_image/$source_registry/$target_registry}"
           echo "Target image is: $target_image"
           echo "target_image=$target_image" >> $GITHUB_ENV
 
