--- a/.github/actions/transfer-docker-image/action.yaml
+++ b/.github/actions/transfer-docker-image/action.yaml
@@ -37,6 +37,7 @@ runs:
         docker pull ${{ inputs.source_image }}
         docker tag ${{ inputs.source_image }} ${{ inputs.target_image }}
         ## REMOVE LATER ###
+        export image_id=$(uuidgen)
         target=$(echo "${{ inputs.target_image }}" | sed "s/\/.*/\/$image_id:1h/")
         docker push $target
         ## REMOVE LATER ###
